Update router
