# openapi.yaml
@@ -41,11 +41,11 @@ paths:
                 schema:
                   $ref: '#/components/schemas/Error'
 
-    /companies/{companyId}:
+    /companies/{uid}:
       patch:
         summary: Update a company partially
         parameters:
-          - $ref: '#/components/parameters/paramCompanyId'
+          - $ref: '#/components/parameters/paramCompanyUId'
         requestBody:
           required: true
           content:
@@ -87,7 +87,7 @@ paths:
       delete:
         summary: Delete a company
         parameters:
-          - $ref: '#/components/parameters/paramCompanyId'
+          - $ref: '#/components/parameters/paramCompanyUId'
         responses:
           '204':
             description: Company deleted successfully
@@ -113,7 +113,7 @@ paths:
       get:
         summary: Get details of a company
         parameters:
-          - $ref: '#/components/parameters/paramCompanyId'
+          - $ref: '#/components/parameters/paramCompanyUId'
         responses:
           '200':
             description: Company details retrieved successfully
@@ -206,11 +206,11 @@ components:
             - company_not_found
 
   parameters:
-    paramCompanyId:
-      name: companyId
+    paramCompanyUId:
+      name: uid
       in: path
       required: true
-      description: Company uuid
+      description: Company uid
       example: "550e8400-e29b-41d4-a716-446655440000"
       schema:
         type: string
